# Parallelized_merge_sort

./: .gitignore  CMakeLists.txt  ParallelizedMergeSort.cpp  README.md  build_and_run.bat  build_and_run.sh
MergeSort/: CMakeLists.txt  MergeSort.cpp  MergeSort.h
ThreadPool/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.h
